--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ transformers==4.41.1
 torch==2.3.0
 plotly==5.22.0
 streamlit==1.34.0
+apiclient==1.0.4
+google-api-core==2.19.0
+google-api-python-client==2.133.0
+google-auth==2.30.0
+google-auth-httplib2==0.2.0
+google-pasta==0.2.0
+googleapis-common-protos==1.63.1
